--- a/duck_exp/requirements.txt
+++ b/duck_exp/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.7.2
+dj-database-url==2.1.0
 Django==4.2.7
 django-ace==1.26.0
+gunicorn==21.2.0
+packaging==23.2
 psycopg==3.1.12
 regex==2023.10.3
 sqlparse==0.4.4
